SR-11148: Separate do and while blocks generate error from legacy diagnostic 1. Taking new line into account if there is a `while` token after stmt. 2. Updated diagnostic to provide new line separator.